add get file from minio
